--- a/aphantasia_priming_analysis.qmd
+++ b/aphantasia_priming_analysis.qmd
@@ -7,9 +7,11 @@ warning: false
 error: false
 message: false
 cap-location: bottom
+editor_options: 
+  chunk_output_type: console
 ---
 
-Below is the setup code, including two essential steps: 1) installing the required packages for this data analysis; and 2) importing data into the dataframes used throughout this data analysis. I left this step there for reference in a view of transparency for the interested reader.
+Below is the setup code, including two essential steps: 1) installing the required packages for this data analysis, and 2) importing data into the dataframes used throughout. I left this step there for reference in a view of transparency for the interested reader.
 
 ```{r setup}
 
@@ -30,6 +32,7 @@ shelf(
   # Excel files management
   readxl,
   # --- data analysis packages:
+  broom,         # tidy modelling
   easystats,      # framework for data analysis functions
   brms,           # bayesian modeling
   # MASS,           # Box-Cox transformation
@@ -92,6 +95,28 @@ df_rotation <- read_excel("data/aphantasia_priming_tidy_data.xlsx",
 # Questionnaires
 df_questionnaires <- read_excel("data/aphantasia_priming_tidy_data.xlsx", 
                      sheet = "data_questionnaires")
+```
+
+## Exploratory Data Analysis
+
+The four questionnaire variables (VVIQ, OSIQ-O and S, and SUIS) are meant to be used as predictors (independent variables) for the behavioural outcomes (RTs) of the study. Three of these - VVIQ, OSIQ-O and SUIS - evaluate visual imagery: as such, in a view of parsimony, we are going to evaluate the correlation between these continuous predictors.
+
+```{r}
+# Correlation between questionnaire scores
+df_questionnaires %>% 
+  select(vviq80:suis60) %>% 
+  correlation(
+    bayesian = TRUE,
+    partial = TRUE,
+    method = "auto") %>% 
+  summary %>%
+  plot
+
+cor_test(df_questionnaires, "vviq80", "suis60") %>% plot
+cor_test(df_questionnaires, "vviq80", "osiq_o75") %>% plot
+cor_test(df_questionnaires, "vviq80", "osiq_s75") %>% plot
+cor_test(df_questionnaires, "osiq_o75", "osiq_s75") %>% plot
+
 ```
 
 
