--- a/aphantasia_priming_analysis.qmd
+++ b/aphantasia_priming_analysis.qmd
@@ -4,6 +4,8 @@ author: "Maël Delem"
 format: html
 editor_options: 
   chunk_output_type: console
+toc: true
+number-sections: true
 ---
 
 This analysis was conducted in R language through the RStudio Integrated Development Environment. Just down below is the setup code, including two essential steps: 1) installing the required packages for this data analysis, and 2) importing data into the dataframes used throughout. I left this (usually hidden) step there for reference in a view of transparency for the interested reader.
@@ -114,6 +116,8 @@ df_rotation_vviq <- dfs_vviq[[4]]
 ```
 
 ## Exploratory Data Analysis
+
+### Questionnaire data and imagery
 
 The four questionnaire variables - VVIQ, OSIQ-Object and Spatial, and SUIS - are meant to be used as predictors (independent variables) for the behavioural outcomes of the experiment (dependent variables, RTs and potentially accuracy). Three of these - VVIQ, OSIQ-Object and SUIS - evaluate visual imagery: as such, in a view of parsimony, we are going to evaluate the correlation between these continuous predictors and judge if they should be merged/omitted. The results of the Bayesian partial correlations between the four variables are displayed in @fig-cor_matrix and @tbl-cor_stats. Partial correlations have been chosen here to account for the (theoretically huge) covariance between visual imagery variables. It will result in more conservative estimations of the correlations, and a better understanding of the relations between visual and spatial imagery measures.
 
@@ -236,7 +240,7 @@ As expected, the visual imagery variables are grouped in a single component with
 
 Standardized predicted values for each component will be computed and added to the data, renamed *Visual Imagery* (PC1, mostly VVIQ + SUIS + OSIQ-O with an influence of OSIQ-S) and *Spatial Imagery* (PC2, mostly OSIQ-S, with an influence of SUIS). In order to align the *Spatial Imagery* variable with the OSIQ-Spatial, the variable will be reversed (they are correlated negatively as it is, as shown by the -.96 loading on PC2).
 
-```{r components}
+```{r pca_components}
 pca_components <- pca %>% predict
 
 df_questionnaires_pca <- 
@@ -253,7 +257,7 @@ df_questionnaires_pca <-
 
 Now we can see that the main visual imagery variables, namely the (conventional) VVIQ and the *Visual Imagery* component created through PCA are completely decorrelated from the *Spatial Imagery* component, as shown in @fig-spatial_corr.
 
-```{r components}
+```{r spatial_correlations}
 #| label: fig-spatial_corr
 #| echo: false
 #| fig-cap: "Correlation between the main visual imagery variables and the spatial imagery component."
@@ -316,6 +320,22 @@ ggarrange(
 )
 
 ```
+
+The consequence of this analysis is that from this point onwards, for the future models to be fitted, two options are available:
+
+- Bin the participants in two categories based on the VVIQ (cut-off at 32, Aphantasics/Phantasics).
+
+- Use the visual imagery as a continuous variable.
+
+Although we could use the VVIQ both for categorizing and as a classification variable, for the sake of consistency, we are going to use the VVIQ only as a classification variable for defining aphantasia, and the *Visual Imagery* component from the PCA as the continuous variable measuring visual imagery. Therefore two types of models are going to be fitted:
+
+- Models using Aphantasia as a categorical variable.
+
+- Models using *Visual Imagery* as a continuous variable.
+
+In both cases, we are going to account for the potential effect of spatial imagery by using the eponymous component computed ealier as a predictor in the models.
+
+
 
 
 
